<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/fist"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <include layout="@layout/layout_title"
        />
    <View
        android:layout_marginTop="@dimen/y38"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="@color/color_EAEAEA"
        />
    <RelativeLayout
        android:background="@color/color_F5F5F5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y210"
            android:background="@color/color_FFFFFF"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingLeft="@dimen/x56"
            android:textSize="@dimen/x61"
            />

        <Button
            android:id="@+id/bt_get_code"
            android:layout_width="@dimen/x384"
            android:layout_height="@dimen/y154"
            android:layout_marginRight="@dimen/x45"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/code_btn_green_2"
            android:gravity="center"
            android:text="@string/get_code"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/x58" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/color_EAEAEA"
        />
    <EditText
        android:id="@+id/et_login_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y210"
        android:background="@color/color_FFFFFF"
        android:hint="@string/code"
        android:inputType="number"
        android:paddingLeft="@dimen/x56"
        android:textSize="@dimen/x61"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="@color/color_EAEAEA"
        />
    <com.qmuiteam.qmui.widget.QMUIFloatLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x42"
        android:layout_marginRight="@dimen/x45"
        android:layout_marginTop="@dimen/y98"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hint_1"
            android:textSize="@dimen/x58"
            android:textColor="@color/color_666666"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hint_2"
            android:textSize="@dimen/x58"
            android:textColor="@color/color_666666"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hint_3"
            android:textSize="@dimen/x58"
            android:textColor="@color/color_666666"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hint_4"
            android:textSize="@dimen/x58"
            android:textColor="@color/color_666666"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hint_5"
            android:textSize="@dimen/x58"
            android:textColor="@color/color_666666"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hint_6"
            android:textSize="@dimen/x58"
            android:textColor="@color/color_666666"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hint_7"
            android:textSize="@dimen/x58"
            android:textColor="@color/color_666666"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hint_8"
            android:textSize="@dimen/x58"
            android:textColor="@color/color_666666"
            />
        <TextView
            android:id="@+id/tv_login_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textSize="@dimen/x58"
            android:textColor="@color/color_15D075"
            />
    </com.qmuiteam.qmui.widget.QMUIFloatLayout>
    <Button
        android:id="@+id/bt_login"
        style="@style/btn_test_61"
        android:background="@drawable/code_btn_4"
        android:layout_marginLeft="@dimen/x56"
        android:layout_marginRight="@dimen/x60"
        android:layout_marginTop="@dimen/y111"
        android:text="@string/login"
        />
    <TextView
        android:id="@+id/tv_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/x54"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/x58"
        android:layout_marginTop="@dimen/y77"
        android:textColor="@color/color_30ADFC"
        android:text="@string/to_register"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/y170"
        >
        <View
            android:layout_width="@dimen/x192"
            android:layout_height="@dimen/y2"
            android:background="@color/color_CCCCCC"
            android:layout_marginRight="@dimen/x40"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/x68"
            android:layout_gravity="end"
            android:gravity="center"
            android:textColor="@color/color_999999"
            android:text="@string/other_register"
            />
        <View
            android:layout_width="@dimen/x192"
            android:layout_height="@dimen/y2"
            android:background="@color/color_CCCCCC"
            android:layout_marginLeft="@dimen/x40"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_weixin_login"
        android:layout_gravity="center"
        android:layout_width="@dimen/x499"
        android:layout_height="@dimen/y154"
        android:layout_marginTop="@dimen/y79"
        android:background="@drawable/bg_btn_20"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="@dimen/y115"
            android:layout_height="@dimen/y115"
            android:background="@mipmap/weixin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weixin_login"
            android:layout_marginLeft="@dimen/x19"
            android:textColor="@color/color_15D075"
            android:textSize="@dimen/x58"
            />
    </LinearLayout>
</LinearLayout>