<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/fist"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <include layout="@layout/layout_title"
        />
    <View
        android:layout_marginTop="@dimen/y38"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="@color/color_EAEAEA"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y210"
            android:background="@color/color_FFFFFF"
            android:hint="@string/phone"
            android:paddingLeft="@dimen/x56"
            android:textSize="@dimen/x61"
            />
        <Button
            android:id="@+id/bt_get_code"
            android:layout_width="@dimen/x384"
            android:layout_height="@dimen/y154"
            android:layout_marginRight="@dimen/x45"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/code_btn_green_2"
            android:gravity="center"
            android:text="@string/get_code"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/x58" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/color_EAEAEA"
        />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y210"
        android:background="@color/color_FFFFFF"
        android:hint="@string/code"
        android:inputType="number"
        android:paddingLeft="@dimen/x56"
        android:textSize="@dimen/x61"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="@color/color_EAEAEA"
        />
    <EditText
        android:id="@+id/et_new_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y210"
        android:background="@color/color_FFFFFF"
        android:hint="@string/new_pass"
        android:inputType="text"
        android:paddingLeft="@dimen/x56"
        android:textSize="@dimen/x61"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="@color/color_EAEAEA"
        />
    <EditText
        android:id="@+id/et_invite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y210"
        android:background="@color/color_FFFFFF"
        android:hint="@string/invite"
        android:inputType="text"
        android:paddingLeft="@dimen/x56"
        android:textSize="@dimen/x61"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:background="@color/color_EAEAEA"
        />
    <Button
        android:id="@+id/bt_login"
        style="@style/btn_test_61"
        android:background="@drawable/code_btn_4"
        android:layout_marginLeft="@dimen/x56"
        android:layout_marginRight="@dimen/x60"
        android:layout_marginTop="@dimen/y111"
        android:text="@string/register"
        />
    <TextView
        android:id="@+id/tv_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/x54"
        android:layout_gravity="end"
        android:layout_marginRight="@dimen/x58"
        android:layout_marginTop="@dimen/y77"
        android:textColor="@color/color_30ADFC"
        android:text="@string/to_login"
        />
</LinearLayout>