<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/color_F5F5F5"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y200"
        android:background="@color/color_15D075">

        <ImageView
            android:id="@+id/iv_message"
            android:layout_width="@dimen/y77"
            android:layout_height="@dimen/y77"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x58"
            android:src="@mipmap/masege" />

        <TextView
            android:textSize="@dimen/x69"
            android:textColor="@color/color_FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/my" />

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_marginRight="@dimen/x69"
            android:layout_width="@dimen/y77"
            android:layout_height="@dimen/y77"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/setting_white" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y400"
        android:background="@color/color_15D075">

        <com.qmuiteam.qmui.widget.QMUIRadiusImageView
            android:id="@+id/iv_face"
            android:layout_width="@dimen/y269"
            android:layout_height="@dimen/y269"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x56"
            android:src="@mipmap/masege" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/iv_face"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x58"
            android:gravity="center_vertical"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_name"
                android:textSize="@dimen/x81"
                android:textColor="@color/color_FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="name" />
            <TextView
                android:id="@+id/tv_phone"
                android:textSize="@dimen/x46"
                android:layout_marginTop="@dimen/x28"
                android:textColor="@color/color_FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="phone" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_to_login"
            android:layout_marginRight="@dimen/x40"
            android:layout_width="@dimen/y77"
            android:layout_height="@dimen/y77"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/right" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y307"
        android:background="@color/color_FFFFFF"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_credit_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_15D075"
                android:textSize="@dimen/x77"
                android:text="10"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_666666"
                android:layout_marginTop="@dimen/x24"
                android:textSize="@dimen/x46"
                android:text="信用值"
                />
        </LinearLayout>
        <View
            android:layout_width="@dimen/x2"
            android:layout_height="match_parent"
            android:background="@color/color_DDDDDD"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_FFA200"
                android:textSize="@dimen/x77"
                android:text="150"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/x46"
                android:layout_marginTop="@dimen/x24"
                android:text="积分"
                />
        </LinearLayout>
        <View
            android:layout_width="@dimen/x2"
            android:layout_height="match_parent"
            android:background="@color/color_DDDDDD"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_end_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_FF3618"
                android:textSize="@dimen/x77"
                android:text="￥0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/x46"
                android:layout_marginTop="@dimen/x24"
                android:text="余额"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:background="@color/color_DDDDDD"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <RelativeLayout
            android:id="@+id/rl_my_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y211"
            android:layout_marginTop="@dimen/y38"
            android:background="@color/color_FFFFFF"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:background="@color/color_DDDDDD"
                />
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:background="@color/color_DDDDDD"
                />
            <ImageView
                android:id="@+id/iv_my_line1"
                android:layout_width="@dimen/x96"
                android:layout_height="@dimen/x96"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x71"
                android:src="@mipmap/my_line" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_line"
                android:layout_marginLeft="@dimen/x22"
                android:layout_toEndOf="@+id/iv_my_line1"
                android:textColor="@color/color_333333"
                android:layout_centerVertical="true"
                android:textSize="@dimen/x61"
                />
            <ImageView
                android:layout_width="@dimen/x58"
                android:layout_height="@dimen/x58"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/x71"
                android:src="@mipmap/right_break"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_waybill_order"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y211"
            android:layout_marginTop="@dimen/y38"
            android:background="@color/color_FFFFFF"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:background="@color/color_DDDDDD"
                />
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:background="@color/color_DDDDDD"
                />
            <ImageView
                android:id="@+id/iv_my_line2"
                android:layout_width="@dimen/x96"
                android:layout_height="@dimen/x96"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x71"
                android:src="@mipmap/waybill_bus" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waybill_order"
                android:layout_marginLeft="@dimen/x22"
                android:layout_toEndOf="@+id/iv_my_line2"
                android:textColor="@color/color_333333"
                android:layout_centerVertical="true"
                android:textSize="@dimen/x61"
                />
            <ImageView
                android:layout_width="@dimen/x58"
                android:layout_height="@dimen/x58"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/x71"
                android:src="@mipmap/right_break"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_my_money"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y211"
            android:layout_marginTop="@dimen/y38"
            android:background="@color/color_FFFFFF"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:background="@color/color_DDDDDD"
                />
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:background="@color/color_DDDDDD"
                />
            <ImageView
                android:id="@+id/iv_my_line3"
                android:layout_width="@dimen/x96"
                android:layout_height="@dimen/x96"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x71"
                android:src="@mipmap/my_money" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_money"
                android:layout_marginLeft="@dimen/x22"
                android:layout_toEndOf="@+id/iv_my_line3"
                android:textColor="@color/color_333333"
                android:layout_centerVertical="true"
                android:textSize="@dimen/x61"
                />
            <ImageView
                android:layout_width="@dimen/x58"
                android:layout_height="@dimen/x58"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/x71"
                android:src="@mipmap/right_break"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_shop_point"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y211"
            android:layout_marginTop="@dimen/y38"
            android:background="@color/color_FFFFFF"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:background="@color/color_DDDDDD"
                />
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:background="@color/color_DDDDDD"
                />
            <ImageView
                android:id="@+id/iv_my_line4"
                android:layout_width="@dimen/x96"
                android:layout_height="@dimen/x96"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x71"
                android:src="@mipmap/point_shop" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_point"
                android:layout_marginLeft="@dimen/x22"
                android:layout_toEndOf="@+id/iv_my_line4"
                android:textColor="@color/color_333333"
                android:layout_centerVertical="true"
                android:textSize="@dimen/x61"
                />
            <ImageView
                android:layout_width="@dimen/x58"
                android:layout_height="@dimen/x58"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/x71"
                android:src="@mipmap/right_break"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_more_setting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y211"
            android:layout_marginTop="@dimen/y38"
            android:background="@color/color_FFFFFF"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:background="@color/color_DDDDDD"
                />
            <View
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x2"
                android:background="@color/color_DDDDDD"
                />
            <ImageView
                android:id="@+id/iv_my_line5"
                android:layout_width="@dimen/x96"
                android:layout_height="@dimen/x96"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x71"
                android:src="@mipmap/setting_red" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_setting"
                android:layout_marginLeft="@dimen/x22"
                android:layout_toEndOf="@+id/iv_my_line5"
                android:textColor="@color/color_333333"
                android:layout_centerVertical="true"
                android:textSize="@dimen/x61"
                />
            <ImageView
                android:layout_width="@dimen/x58"
                android:layout_height="@dimen/x58"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/x71"
                android:src="@mipmap/right_break"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>